--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,10 @@
+REACT_APP_CLIENT_URL = "http://localhost:3000"
 REACT_APP_API = "http://localhost:5000/api"
+
+
 REACT_APP_TG_GROUP_URL = "https://t.me/mogcraft"
 REACT_APP_VK_GROUP_URL = "https://vk.com/mogcraft_project"
-REACT_APP_TG_OWNER_ID = "1180308963"
 REACT_APP_VK_OWNER_URL = "https://vk.com/keckmeme"
+
+REACT_APP_TG_OWNER_ID = "1180308963"
+REACT_APP_TG_GROUP_ID = "-1002151299319"
